<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.freaksheep.actionbardemo1.MainActivity" >

    <item
        android:id="@+id/action_menu"
        android:icon="@drawable/ic_action_overflow"
        android:orderInCategory="200"
        android:title="@string/action_settings"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_settings"
                android:icon="@drawable/ic_action_overflow"
                android:orderInCategory="200"
                android:title="@string/action_settings"
                app:showAsAction="always"/>
            <item
                android:id="@+id/action_aboutus"
                android:icon="@drawable/ic_action_about"
                android:orderInCategory="300"
                android:title="@string/action_about"
                app:showAsAction="always"/>
        </menu>
    </item>
    <item
        android:id="@+id/action_disconnect"
        android:orderInCategory="100"
        android:title="@string/action_disconnect"
        app:showAsAction="always"/>

</menu>