<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${packageName}.${activityClass}" >

    <ScrollView
        android:id="@+id/ScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

       <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbars="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/about_general"
                android:textSize="6pt" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:autoLink="web"
                android:gravity="center"
                android:linksClickable="true"
                android:paddingTop="5dp"
                android:text="@string/about_license_gpl"
                android:textSize="6pt" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:scaleType="centerInside"
                android:src="@drawable/logo" />


            <TextView
                android:id="@+id/AboutPeople"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:autoLink="web"
                android:gravity="center"
                android:linksClickable="true"
                android:paddingTop="12dp"
                android:text="@string/about_people"
                android:textSize="6pt" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="5dp"
                android:text="@string/about_thanks"
                android:textSize="6pt" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="5dp"
                android:text="@string/about_LEGO_legal"
                android:textSize="6pt" />

            <ImageView
                android:id="@+id/legalImage"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:src="@drawable/splash_screen" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>